5-25-2010: Added indicator for elapsed time in day
5-24-2010: Add row selection model
5-24-2010: Generate custom reports based on selection
5-23-2010: Ensure saving on exit, if changes have been made
> 12-31-2009 Added a display for the total time for a selection in Summarize
> 11-8-2009 added global hotkeys for clocking in and out (windows only)
# 1.00.02 (32797) Jun 27, 2009
6/27/09 Rearrange buttons, see #1696
# 1.00.01 (32722) Jun 25, 2009
6/25/09 Initial deploy of timesheet utility application.