@@ -1,3 +1,4 @@
+5-26-2010: Report tasks within a category, sorted by most time taken
 5-25-2010: Added indicator for elapsed time in day
 5-24-2010: Add row selection model
 5-24-2010: Generate custom reports based on selection
